# substack_mcp

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCP_SETUP.md  Procfile  README.md  TROUBLESHOOTING.md  claude_desktop_config.json  dm_responses.numbers  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run_mcp_server.py  run_mcp_with_venv.sh  setup.cfg  summary.md
scripts/: examples.http  run_server.py
src/substack_mcp/: __init__.py  analysis.py  cache.py  client.py  mcp_http_server.py  mcp_server.py  models.py  parsers.py  server.py  settings.py
src/substack_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
substack_mcp_env/: pyvenv.cfg
tests/: test_analysis.py
