[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substack-mcp"
version = "0.1.0"
description = "Substack scraping and analysis MCP server."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Cypher"}
]
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "feedparser>=6.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "vaderSentiment>=3.3",
  "python-dateutil>=2.9",
  "cachetools>=5.3",
  "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "respx>=0.20"
]
