[metadata]
name = substack-mcp
version = 0.1.0
description = Substack scraping and analysis MCP server.
long_description = file: README.md
long_description_content_type = text/markdown
author = Cypher

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    httpx>=0.27
    beautifulsoup4>=4.12
    lxml>=5.2
    feedparser>=6.0
    fastapi>=0.111
    uvicorn[standard]>=0.30
    pydantic>=2.8
    vaderSentiment>=3.3
    python-dateutil>=2.9
    cachetools>=5.3

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.3
    pytest-asyncio>=0.23
    respx>=0.20
